# secret-vault-encryptor

./: README.es.md  README.md  pyproject.toml
docs/: encriptador_core.html  index.html  password_vault.html  search.js
encriptador_core/: __init__.py  encriptador.py  utils.py
examples/: usar_encriptador_core.py  usar_password_vault.py
password_vault/: __init__.py  cli.py  kdf.py  models.py  vault.py
tests/: test_encriptador_core.py  test_password_vault.py
