[project]
name = "secret_vault_encryptor"
version = "0.1.0"
description = "Encriptador minimalista en Python basado en Fernet para guardar y recuperar secretos (tokens, claves de API, credenciales) de forma segura en disco."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bcrypt>=5.0.0",
    "cryptography>=46.0.4",
    "pytest>=9.0.2",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["test"]

[dependency-groups]
dev = [
    "pdoc>=16.0.0",
]
