[project]
name = "secret_vault_encryptor"
version = "1.0.0"
description = "Gestor de contraseñas y bóveda de secretos local en Python, con cifrado autenticado Fernet y derivación de clave PBKDF2 desde una master password"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Jorge de la Flor", email = "frostcore.dev@proton.me" }
]
dependencies = [
    "cryptography>=46.0.4",
    "pytest>=9.0.2",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["test"]

[dependency-groups]
dev = [
    "pdoc>=16.0.0",
]
